hm1-workWithFile part 3 # fixed